Kubernetes/Work/Juiceshop/juiceshop-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: juiceshop
  labels:
    run: juiceshop
spec:
  ports:
  - name: port3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    run: juiceshop
