Kubernetes/Work/Juiceshop/juiceshop-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-modsecurity: \"true\"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecRequestBodyAccess On
      SecAuditEngine RelevantOnly
      SecAuditLogParts ABIJDEFHZ
      SecAuditLog /var/log/modsec_audit.log
      SecRule REQUEST_HEADERS:User-Agent \"fern-scanner\" \"log,deny,id:107,status:403,msg:\'Fern Scanner Identified\'\"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: juiceshop-ingress
spec:
  rules:
  - host: juiceshop.example.com
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: juiceshop
          servicePort: 3000
